files/envoy-all.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: external-gatewayclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: external-proxy-config
    namespace: gateway
    
---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: gateway
spec:
  gatewayClassName: external-gatewayclass
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-origin-tls-default
        namespace: default
    allowedRoutes:
      namespaces:
        from: All

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-tls
  namespace: default
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateway
  to:
  - group: ""
    kind: Secret
    name: wildcard-origin-tls-default

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kangparkir
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - "kang.nickeverest.site"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kangparkir-service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
      sessionPersistence:
        sessionName: cookie_affinity
        type: Cookie
        absoluteTimeout: 3600s
        cookieConfig:
          lifetimeType: Permanent
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - X-Frame-Options
              - Content-Security-Policy
            set:
              - name: X-Frame-Options
                value: "SAMEORIGIN"
              - name: X-XSS-Protection
                value: "1; mode=block"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: Referrer-Policy
                value: "strict-origin-when-cross-origin"
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains"
              - name: Permissions-Policy
                value: 'camera=(self "https://id-production-cdn.zoloz.com" "https://vbuat.cimbniaga.co.id:8443")'
              - name: Cache-Control
                value: "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
              - name: Content-Security-Policy
                value: "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' https://www.cimbniaga.co.id https://octo-connect-non-prod.s3.ap-southeast-3.amazonaws.com https://octoonboarding-sit.apps.nonprod2.mylab.local data: blob:; font-src 'self' data:; connect-src 'self' https://api-stage-octoconnect.mylab.local https://storage.googleapis.com https://*.googleusercontent.com https://api-experiment-octoconnect-stage.mylab.local data: blob:; fra [...]

---

apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: kangparkir-request-buffer-3m
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: kangparkir
  requestBuffer:
    limit: 3Mi
